# Plover-Sparrow

./: README.md  plover_sparrow.py  plover_wagtail.py  setup.cfg  wagtail-phrasing.py  zhuyin-engine-draft.py  zhuyin.py
dictionaries/: sparrow-1char.json  sparrow-2char.json
plover-sparrow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plover-wagtail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
