[metadata]
name = plover-wagtail
version=pre-0.1.1
description = Wagtail Steno for Mandarin
long_description = file: README.md
long_description_content_type = text/markdown
author = Devin
author_email = devin.tankersley@gmail.com
url = https://github.com/dtankers/Plover-Wagtail/
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover-wagtail

[options.entry_points]
plover.system =
  Wagtail = plover-wagtail
