[metadata]
name = plover_sparrow
version=0.0.1
description = Sparrow Steno for Mandarin
long_description = file: README.md
long_description_content_type = text/markdown
author = Devin
author_email = devin.tankersley@gmail.com
url = https://github.com/dtankers/Plover-Sparrow/
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover_sparrow

[options.entry_points]
plover.system =
  Sparrow = plover_sparrow
